feat: add pgvector knowledge retrieval